# CPP-Object-Viewer

./: .gitignore  README.md
build-3DViewer_v1-Desktop-Debug/: 3DViewer_v1  Makefile  moc_glview.cpp  moc_mainwindow.cpp  moc_options.cpp  ui_mainwindow.h  ui_options.h
src/: 3DViewer.pro  3DViewer_v1.pro  CMakeLists.txt  Doxyfile  Makefile  ObjectModel.cpp  ObjectModel.h  README.md  conf  controller.cc  controller.h  gl_controller.h  glview.cpp  glview.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_model.h  options.cc  options.cpp  options.h  options.ui  test_C_functions.check
src/Controller/: gl_controller.cc  gl_controller.h
src/Facade/: object_model.h  part_object.h
src/Facade/Affine/: affine_object.cc
src/Facade/Container/: container_object.cc
src/Facade/FileReader/: parsing_object.cc
src/Facade/FiliReader/: parsing_object.cc
src/Facade/Mediator/: object_model.h
src/Facade/NormalizationParameters/: normalization.cc
src/Facade/Singleton/: singleton.cc
src/GIFCreation/: CMakeLists.txt
src/GIFCreation/gifLib/: gif_err.c:Zone.Identifier
src/Model/: object_model.cc
src/QClass/: controller.cc  controller.h  gl_controller.cc  gl_controller.h  gl_override.cc  gl_override.h  view.ui
src/QClass/OpenGLWidget/: gl_override.cc  gl_override.h
src/SettingsClass/: options.cc  options.h  options.ui  options_t.cc  options_t.h
src/View/: view.ui
src/backend/: 3d_viewer.h
src/backend/moving/: centralize_object_t.c  moving_object_t.c  normalization_object_t.c  rotation_object_t.c  zoom_object_t.c
src/backend/parsing/: init_object_t.c  parsing_edges.c  parsing_object_t.c  parsing_vertexes.c  remove_object_t.c
src/icon/: 3DviewerLogo.icns  icons.qrc
src/tests/: invalid_facet.txt  invalid_size_vertex.txt  invalid_test.txt  test.txt  tests.cc
